Add Contact and Needs Analysis page

--- a/HighSchool-modals.html
+++ b/HighSchool-modals.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-  <title>Business English – Receptionist Lesson - Personal Bootstrap Template</title>
+  <title>High School – Modals Lesson </title>
   <meta name="description" content="" />
   <meta name="keywords" content="" />
 
@@ -51,8 +51,8 @@
           </li>
           <li><a href="needsAnalysis.html">Business Needs Analysis</a></li>
           <li><a href="resume.html">Resume</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
+          <!-- <li><a href="services.html">Services</a></li> -->
+          <!-- <li><a href="portfolio.html">Portfolio</a></li> -->
           <li><a href="contact.html">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
