--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>About - Personal Bootstrap Template</title>
+  <title>About</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -62,7 +62,7 @@
           <li><a href="needsAnalysis.html">Business Needs Analysis</a></li>
           <li><a href="resume.html">Resume</a></li>
           <!-- <li><a href="services.html">Services</a></li> -->
-          <li><a href="portfolio.html">Portfolio</a></li>
+          <!-- <li><a href="portfolio.html">Portfolio</a></li> -->
           <li><a href="contact.html">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -81,6 +81,9 @@
             <div class="col-lg-8">
               <h1>About</h1>
               <p class="mb-0">I’m Katherine Bailey Hines, a certified TEFL instructor with specialties in Business English and Teaching English Online. I’m passionate about helping adult learners improve their professional English skills. With a background in technology and insurance, I’m eager to combine these skills to create engaging lessons. I’m actively gaining experience and looking forward to growing as a teacher and trainer.</p>
+              <p></p>
+              <h2>Teaching Philosophy</h2>
+              <p>I believe in creating tailored, student-centered lesson plans that reflect each learner’s unique goals and interests. By connecting lessons to topics my students care about, I help them develop practical language skills and confidence for real-world communication.</p>
             </div>
           </div>
         </div>
