--- a/receptionist-lesson.html
+++ b/receptionist-lesson.html
@@ -51,7 +51,7 @@
           </li>
           <li><a href="needsAnalysis.html">Business Needs Analysis</a></li>
           <li><a href="resume.html">Resume</a></li>
-          <li><a href="services.html">Services</a></li>
+          <!-- <li><a href="services.html">Services</a></li> -->
 
           <li><a href="contact.html">Contact</a></li>
         </ul>
