--- a/needsAnalysis.html
+++ b/needsAnalysis.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Services - Personal Bootstrap Template</title>
+  <title>Business English Needs Analysis</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -62,7 +62,7 @@
           </li>
           <li><a href="needsAnalysis.html">Business Needs Analysis</a></li>
           <li><a href="resume.html">Resume</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
+          <!-- <li><a href="portfolio.html">Portfolio</a></li> -->
           <li><a href="contact.html">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
