--- a/resume.html
+++ b/resume.html
@@ -105,28 +105,41 @@
             <h3 class="resume-title">Sumary</h3>
 
             <div class="resume-item pb-0">
-              <h4>Brandon Johnson</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <h4>Katherine Bailey Hines</h4>
+              <p><em>Certified TEFL instructor with specialties in Business English and Teaching English Online. Focused on helping adult learners improve professional communication skills. Actively pursuing opportunities in freelance tutoring and corporate training. Strong interest in using technology to enhance learning, with foundational skills in Python, data analytics, and machine learning.</em></p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>Arizona, USA, 85614</li>
+                <li>+1 786 562 7070</li>
+                <li>WhatsApp: +1 808 238 7912</li>
+                <li>klbailey.k@gmail.com.com</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <h4>International TEFL Academy, Chicago, IL, USA</h4>
+              <!-- <h5>2025</h5> -->
+              <p><em>Level 5 Certificate in Teaching English as a Foreign Language</em></p>
+              <ul>
+                <li>150 hours coursework</li>
+                <li>20 hours student teaching practicum</li>
+                <li>30 hours Teaching Business English</li>
+                <li>30 hours Teaching English Online</li>
+              </ul>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>Skillspire, SeaTac, WA, USA</h4>
+              <!-- <h5>2010 - 2014</h5> -->
+              <p><em>Advanced Data Analytics and Full Stack Web Development Immersive</em></p>
+              <p>AI/machine learning and web development with Python</p>
+            </div><!-- Edn Resume Item -->
+
+            <div class="resume-item">
+              <h4>Hawaii Pacific University, Hawaii, USA</h4>
+              <!-- <h5>2010 - 2014</h5> -->
+              <p><em>BSBA in Management</em></p>
+              <p><em>BSBA in Computer Information Systems</em></p>
             </div><!-- Edn Resume Item -->
 
           </div>
@@ -134,26 +147,42 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>Freelance AI Data Annotator</h4>
+              <h5>2024 - Present</h5>
+              <!-- <p><em>Experion, New York, NY </em></p> -->
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Assessed and labeled video content to train AI in text and visual understanding, emphasizing accuracy and clear communication.</li>
+                <li>Developed prompts and reviewed AI-generated responses, providing detailed feedback to improve quality.</li>
+                
               </ul>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Pet Sitter</h4>
+              <h5>2024 - Present</h5>
+              <!-- <p><em>Stepping Stone Advertising, New York, NY</em></p> -->
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Delivered reliable, client-focused services with strong communication and scheduling skills.</li>
+              </ul>
+            </div><!-- Edn Resume Item -->
+
+            <div class="resume-item">
+              <h4>Flood Underwriter</h4>
+              <h5>2016 - 2017</h5>
+              <p><em>Assurant, Arizona, USA</em></p>
+              <ul>
+                <li>Evaluated risk and ensured compliance with company and federal guidelines, demonstrating attention to detail and analytical skills.</li>
+              </ul>
+            </div><!-- Edn Resume Item -->
+
+            <div class="resume-item">
+              <h4>Customer Development Team</h4>
+              <h5>2012 - 2015</h5>
+              <p><em>GoDaddy, Arizona, USA</em></p>
+              <ul>
+                <li>Consulted small business clients to enhance online presence and business success.</li>
+                <li>Delivered outbound phone consultations, developed tailored business recommendations, and strengthened client relationships.</li>
+                <li>Gained experience in customer service, communication, and business strategy.</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
