Corrected typo on resume

--- a/resume.html
+++ b/resume.html
@@ -111,7 +111,7 @@
                 <li>Arizona, USA, 85614</li>
                 <li>+1 786 562 7070</li>
                 <li>WhatsApp: +1 808 238 7912</li>
-                <li>klbailey.k@gmail.com.com</li>
+                <li>klbailey.k@gmail.com</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
