--- a/needsAnalysis.html
+++ b/needsAnalysis.html
@@ -80,7 +80,7 @@
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
               <h1>Business English Needs Analysis</h1>
-              <p class="mb-0">The needs analysis is for a one-to-one class with a working professional. This analysis has been used for a French marketing professional, at an Advanced Enlish level.</p>
+              <p class="mb-0">The needs analysis is for a one-to-one online class with a working professional. This analysis has been used for a French marketing professional, at an Advanced English level.</p>
             </div>
           </div>
         </div>
