--- a/index.html
+++ b/index.html
@@ -83,9 +83,12 @@
         <h2>Katherine Bailey Hines</h2>
         <p>I'm a <span class="typed" data-typed-items="TEFL Instructor, Business English Trainer, Online ESL Tutor"></span><span class="typed-cursor typed-cursor--blink"></span></p>
         <div class="social-links">
-          <a href="#"><i class="bi bi-twitter-x"></i></a>
+          <!-- <a href="https://klbailey.github.io/NewPortfolio/index.html" target="_blank" rel="noopener noreferrer">
+            <i class="bi bi-globe"></i>
+          </a> -->
+          <!-- <a href="#"><i class="bi bi-twitter-x"></i></a>
           <a href="#"><i class="bi bi-facebook"></i></a>
-          <a href="#"><i class="bi bi-instagram"></i></a>
+          <a href="#"><i class="bi bi-instagram"></i></a> -->
           <a href="https://www.linkedin.com/in/katherine-bailey-hines-011049257" target="_blank" rel="noopener noreferrer">
             <i class="bi bi-linkedin"></i>
           </a> 
