Added button on resume.html

--- a/resume.html
+++ b/resume.html
@@ -8,6 +8,18 @@
   <meta name="description" content="">
   <meta name="keywords" content="">
 
+  <style>
+    .btn-primary {
+      background-color: #28a745 !important; /* Bootstrap green */
+      border-color: #28a745 !important;
+      color: white !important;
+    }
+    .btn-primary:hover {
+      background-color: #218838 !important;
+      border-color: #1e7e34 !important;
+    }
+  </style>
+
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
@@ -94,6 +106,21 @@
       </nav>
     </div><!-- End Page Title -->
 
+    <main class="main">
+
+    <div class="container my-3">
+      <a href="forms/websiteResume.pdf" download class="btn btn-primary">
+        Download Resume (PDF)
+      </a>
+    </div>
+
+    <!-- Resume Section -->
+    <section id="resume" class="resume section">
+      ...
+    </section>
+
+</main>
+
     <!-- Resume Section -->
     <section id="resume" class="resume section">
 
@@ -102,7 +129,7 @@
         <div class="row">
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">Summary</h3>
 
             <div class="resume-item pb-0">
               <h4>Katherine Bailey Hines</h4>
