Added whatsapp # to contact

--- a/contact.html
+++ b/contact.html
@@ -119,6 +119,7 @@
               <div>
                 <h3>Call Me</h3>
                 <p>+1 786 562 7070</p>
+                <p>WhatsApp: +1 808 238 7912</p>
               </div>
             </div>
           </div><!-- End Info Item -->
