Add adult esl lesson plan

--- a/about.html
+++ b/about.html
@@ -55,8 +55,8 @@
             <ul>
               <li><a href="receptionist-lesson.html">Business English – Receptionist</a></li>
               <li><a href="HighSchool-modals.html">High School ESL - Modals</a></li>
-              <li><a href="#">Kids ESL - The Genie</a></li>
-              <li><a href="#">Coming soon</a></li>
+              <li><a href="adultesl.html">Adult ESL – Second Conditional</a></li>
+              <!-- <li><a href="#">Coming soon</a></li> -->
             </ul>
           </li>
           <li><a href="needsAnalysis.html">Business Needs Analysis</a></li>
@@ -119,7 +119,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Citizenship:</strong> <span>USA</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>IT Website:</strong> <a href="https://klbailey.github.io/NewPortfolio/index.html" target="_blank">klbailey.github.io/NewPortfolio/index.html</a></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+1 786 562 7070</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+1 786 562 7070; WhatsApp: +1 808 238 7912</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Residence:</strong> <span>Arizona, USA</span></li>
                 </ul>
               </div>
