--- a/adultesl.html
+++ b/adultesl.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-  <title>High School – Modals Lesson </title>
+  <title>Adult ESL – Second Conditional - Personal Bootstrap Template</title>
   <meta name="description" content="" />
   <meta name="keywords" content="" />
 
@@ -40,11 +40,11 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="about.html">About</a></li>          
           <li class="dropdown"><a href="#"><span>Sample Lessons</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="receptionist-lesson.html">Business English – Receptionist</a></li>
-              <li><a href="HighSchool-modals.html">High School ESL - Modals</a></li>
+              <li><a href="HighSchool-modals.html">High School ESL – Modals</a></li>
               <li><a href="adultesl.html">Adult ESL – Second Conditional</a></li>
               <!-- <li><a href="#">Coming soon</a></li> -->
             </ul>
@@ -52,7 +52,7 @@
           <li><a href="needsAnalysis.html">Business Needs Analysis</a></li>
           <li><a href="resume.html">Resume</a></li>
           <!-- <li><a href="services.html">Services</a></li> -->
-          <!-- <li><a href="portfolio.html">Portfolio</a></li> -->
+
           <li><a href="contact.html">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -65,8 +65,8 @@
       <div class="container">
         <div class="row d-flex justify-content-center text-center">
           <div class="col-lg-8">
-            <h1>High School – Modals Lesson</h1>
-            <p class="mb-0"> This lesson focuses on the modals of advice "should," "ought to," and "had better".</p>
+            <h1>Adult ESL – Second Conditional</h1>
+            <p class="mb-0">This lesson focuses on the second conditional for high-intermediate to advanced adult ESL learners.</p>
           </div>
         </div>
       </div>
@@ -75,7 +75,7 @@
       <div class="container">
         <ol>
           <li><a href="index.html">Home</a></li>
-          <li class="current">Sample Lesson: High School – Modals Lesson</li>
+          <li class="current">Sample Lesson: Adult ESL – Second Conditional</li>
         </ol>
       </div>
     </nav>
@@ -85,10 +85,10 @@
     <section id="lesson" class="section">
       <div class="container">
         <p><strong>Level:</strong> B2+</p>
-        <p><strong>Aims/Objectives:</strong> Students will be able to understand and use the modals of advice and will practice in speaking and writing contexts.</p>
-        <p>This lesson is centered on modals of advice with the theme of travel.</p>
+        <p><strong>Aims/Objectives:</strong> The students will become familiar with using the second conditional in hypothetic situations and form sentences using the second conditional structure.</p>
+        <p>This lesson is tailored for the adult learner to learn and use the second conditional via presentations, exercises and interactive activities to gain confidence in forming and applying it to sentences vai speaking and writing.</p>
         <p>
-          <a href="https://docs.google.com/document/d/1k3LX-E6VSJ7LVBSupVZACkTiOqi5WMT_/edit?tab=t.0" target="_blank" class="btn" style="background-color: #18d26e; color: #ffffff; border: none;">
+          <a href="https://docs.google.com/document/d/1EEOx3q-R_evt2aAVhwG0lSEWq8e4klCb/edit?usp=sharing&ouid=110263781102401705659&rtpof=true&sd=true" target="_blank" class="btn" style="background-color: #18d26e; color: #ffffff; border: none;">
             View Full Lesson Plan
           </a>
         </p>
