--- a/receptionist-lesson.html
+++ b/receptionist-lesson.html
@@ -46,7 +46,7 @@
               <li><a href="receptionist-lesson.html">Business English – Receptionist</a></li>
               <li><a href="HighSchool-modals.html">High School ESL – Modals</a></li>
               <li><a href="#">Kids ESL - The Genie</a></li>
-              <li><a href="#">Coming soon</a></li>
+              <!-- <li><a href="#">Coming soon</a></li> -->
             </ul>
           </li>
           <li><a href="needsAnalysis.html">Business Needs Analysis</a></li>
