--- a/about.html
+++ b/about.html
@@ -105,7 +105,12 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/AboutPhoto (2).jpg" class="img-fluid" alt="">
+            <!-- <img src="assets/img/AboutPhoto (2).jpg" class="img-fluid" alt=""> -->
+            <img src="assets/img/Headshot.webp" class="img-fluid" alt="">
+            <p></p>
+            <video controls width="100%">
+              <source src="assets/videos/Intro 2 minutes.mp4" type="video/mp4">
+            </video>
           </div>
           <div class="col-lg-8 content">
             <h2>Business English &amp; TEFL Instructor.</h2>
